test/it/code-samples/positive/pages-any-prop-on-event-target/pageCode.js
$w("#button1").onClick(event => {
  event.target.nonExistingProp = "something";
});
