test/it/code-samples/negative/pages-bad-usage-of-existing-prop-on-event-target/pageCode.js
$w("#button1").onClick(event => {
  event.target.onMouseIn("notAFunction")
});
